--- a/web-extension/package.json
+++ b/web-extension/package.json
@@ -6,7 +6,12 @@
   "license": "GPL-3.0-or-later",
   "devDependencies": {
     "chai": "^4.3.6",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^9.2.2"
   },
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.0",
+  "type": "module",
+  "scripts": {
+    "test": "mocha"
+  }
 }
