--- a/web-extension/.vscode/settings.json
+++ b/web-extension/.vscode/settings.json
@@ -21,5 +21,8 @@
       ],
       "url": "https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/package.json"
     }
-  ]
+  ],
+  "search.exclude": {
+    "**/.yarn/releases": true
+  }
 }
