--- a/web-extension/.vscode/settings.json
+++ b/web-extension/.vscode/settings.json
@@ -17,6 +17,12 @@
   "json.schemas": [
     {
       "fileMatch": [
+        "/manifest.json"
+      ],
+      "url": "/share/manifest-schema.json"
+    },
+    {
+      "fileMatch": [
         "package.json"
       ],
       "url": "https://raw.githubusercontent.com/SchemaStore/schemastore/master/src/schemas/json/package.json"
