--- a/web-extension/manifest.json
+++ b/web-extension/manifest.json
@@ -16,6 +16,7 @@
   "browser_action":{
     "default_icon": "assets/chip.svg",
     "default_title": "Tante Jacky",
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "browser_style": true
   }
 }
