--- a/web-extension/.vscode/tasks.json
+++ b/web-extension/.vscode/tasks.json
@@ -2,13 +2,36 @@
   "version": "2.0.0",
   "tasks": [
     {
+      "label": "tante-jacky (web extension): Run",
+      "type": "process",
+      "command": "env",
+      "args": [
+        // https://github.com/electron/electron/issues/28436
+        "-u",
+        "GDK_BACKEND",
+        "web-ext",
+        "run"
+      ],
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "presentation": {
+        "clear": true,
+        "showReuseMessage": false
+      }
+    },
+    {
       "label": "tante-jacky (web extension): Run tests",
       "type": "process",
       "command": "yarn",
       "args": [
         "test"
       ],
-      "group": "test",
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      },
       "presentation": {
         "clear": true,
         "showReuseMessage": false
