Clarify scope of applicable licenses
I’m vendoring third-party code in two places:
- web-extension/.yarn/releases
- web-extension/vendor/addons-linter-5.0.0

Those use different licenses than the main program.
Clarify those differences in both `README.md` and `package.json`, and
add `LICENSE` files to the respective subdirectories.

--- a/web-extension/.gitattributes
+++ b/web-extension/.gitattributes
@@ -26,5 +26,5 @@
 *.yml           text eol=lf
 
 # No need to diff or patch these
-/.yarn/releases/**              binary
+/.yarn/releases/*.cjs           binary
 /.yarn/plugins/**               binary
