--- a/web-extension/package.json
+++ b/web-extension/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Bridge for German banking websites to work with your USB chipTAN reader",
   "author": "Claudia Pellegrino <tantejacky@cpellegrino.de>",
-  "license": "GPL-3.0-or-later",
+  "license": "See License in README.md",
   "devDependencies": {
     "chai": "^4.3.6",
     "mocha": "^9.2.2"
