--- a/web-extension/package.json
+++ b/web-extension/package.json
@@ -6,11 +6,13 @@
   "license": "See License in README.md",
   "devDependencies": {
     "chai": "^4.3.6",
-    "mocha": "^9.2.2"
+    "mocha": "^9.2.2",
+    "web-ext": "^6.8.0"
   },
   "packageManager": "yarn@3.2.0",
   "type": "module",
   "scripts": {
+    "serve": "web-ext run",
     "test": "mocha"
   }
 }
