--- a/web-extension/.vscode/extensions.json
+++ b/web-extension/.vscode/extensions.json
@@ -2,7 +2,6 @@
   "recommendations": [
     "editorconfig.editorconfig",
     "esbenp.prettier-vscode",
-    "redhat.vscode-yaml",
-    "tht13.html-preview-vscode"
+    "redhat.vscode-yaml"
   ]
 }
