--- a/web-extension/.yarnrc.yml
+++ b/web-extension/.yarnrc.yml
@@ -2,4 +2,8 @@ enableGlobalCache: true
 
 nodeLinker: pnp
 
-yarnPath: .yarn/releases/yarn-3.2.1.cjs
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-outdated.cjs
+    spec: "https://mskelton.dev/yarn-outdated/v3"
+
+yarnPath: .yarn/releases/yarn-3.2.4.cjs
